--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "echo \"No build script specified\" && exit 1", // Add a build script if needed
+    "lint": "echo \"No linting script specified\" && exit 1"  // Optional linting script
   },
   "keywords": [],
   "author": "",
